// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Splitter Default 1`] = `
<div
  dir="ltr"
>
  <h2>
    Vertical
  </h2>
  

  <div
    class="fd-splitter"
    style="height: 160px"
  >
    
    
    <div
      class="fd-splitter__pane-container fd-splitter__pane-container--vertical"
    >
      
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      

        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      

        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      
    
    </div>
    

  </div>
  


  <h2>
    Horizontal
  </h2>
  

  <div
    class="fd-splitter"
    style="height: 160px"
  >
    
    
    <div
      class="fd-splitter__pane-container fd-splitter__pane-container--horizontal"
    >
      
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--horizontal-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      

        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--horizontal-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      

        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Splitter Mixed And Nested 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-splitter"
    style="height: 160px"
  >
    
    
    <div
      class="fd-splitter__pane-container fd-splitter__pane-container--vertical"
    >
      
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content, Level 0
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      

        
      <div
        class="fd-splitter__split-pane"
      >
        
            
        <div
          class="fd-splitter__pane-container fd-splitter__pane-container--horizontal"
        >
          
                
          <div
            class="fd-splitter__split-pane"
          >
            
                    Content, Level 1
                
          </div>
          

                
          <div
            aria-orienration="vertical"
            class="fd-splitter__resizer"
            role="separator"
            tabindex="0"
          >
            
                    
            <span
              class="fd-splitter__resizer-decoration-before"
            />
            

                    
            <button
              class="fd-button fd-button--transparent fd-splitter__resizer-grip"
              tabindex="-1"
            >
              
                        
              <i
                class="sap-icon--horizontal-grip fd-splitter__resizer-grip-icon"
              />
              
                    
            </button>
            

                    
            <span
              class="fd-splitter__resizer-decoration-after"
            />
            
                
          </div>
          

                
          <div
            class="fd-splitter__split-pane"
          >
            
                    
            <div
              class="fd-splitter__pane-container fd-splitter__pane-container--vertical"
            >
              
                        
              <div
                class="fd-splitter__split-pane"
              >
                
                            Content, Level 2
                        
              </div>
              
        
                        
              <div
                aria-orienration="vertical"
                class="fd-splitter__resizer"
                role="separator"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-splitter__resizer-decoration-before"
                />
                
        
                            
                <button
                  class="fd-button fd-button--transparent fd-splitter__resizer-grip"
                  tabindex="-1"
                >
                  
                                
                  <i
                    class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
                  />
                  
                            
                </button>
                
        
                            
                <span
                  class="fd-splitter__resizer-decoration-after"
                />
                
                        
              </div>
              
        
                        
              <div
                class="fd-splitter__split-pane"
              >
                
                            Content, Level 2
                        
              </div>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
</div>
`;

exports[`Storyshots Components/Splitter Pagination 1`] = `
<div
  dir="ltr"
>
  <h2>
    One root pane
  </h2>
  

  <div
    class="fd-splitter"
    style="height: 160px"
  >
    
    
    <div
      class="fd-splitter__pane-container fd-splitter__pane-container--horizontal"
    >
      
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      

        
      <div
        class="fd-splitter__pagination"
      >
        
            
        <button
          class="fd-button fd-button--transparent fd-splitter__pagination-item fd-splitter__pagination-item--active"
        >
          
                
          <span
            class="fd-splitter__pagination-item-dot"
          />
          
            
        </button>
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__pagination-item"
        >
          
                
          <span
            class="fd-splitter__pagination-item-dot"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  


  <h2>
    Two root panes
  </h2>
  


  <div
    class="fd-splitter"
    style="height: 160px"
  >
    
    
    <div
      class="fd-splitter__pane-container fd-splitter__pane-container--vertical"
    >
      
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      

        
      <div
        class="fd-splitter__pane-container fd-splitter__pane-container--horizontal"
      >
        
            
        <div
          class="fd-splitter__split-pane"
        >
          
                Content
            
        </div>
        

            
        <div
          class="fd-splitter__pagination"
        >
          
                
          <button
            class="fd-button fd-button--transparent fd-splitter__pagination-item fd-splitter__pagination-item--active"
          >
            
                    
            <span
              class="fd-splitter__pagination-item-dot"
            />
            
                
          </button>
          

                
          <button
            class="fd-button fd-button--transparent fd-splitter__pagination-item"
          >
            
                    
            <span
              class="fd-splitter__pagination-item-dot"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
</div>
`;

exports[`Storyshots Components/Splitter Resizer Appearance 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-splitter"
    style="height: 160px; background: #cccccc;"
  >
    
    
    <div
      class="fd-splitter__pane-container fd-splitter__pane-container--vertical"
    >
      
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Next resizer has default appearance.
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      
        
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Next resizer has translucent appearance.
        
      </div>
      

        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer fd-splitter__resizer--translucent"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      
        
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Next resizer has transparent appearance.
        
      </div>
      
        
        
      <div
        aria-orienration="vertical"
        class="fd-splitter__resizer fd-splitter__resizer--transparent"
        role="separator"
        tabindex="0"
      >
        
            
        <span
          class="fd-splitter__resizer-decoration-before"
        />
        

            
        <button
          class="fd-button fd-button--transparent fd-splitter__resizer-grip"
          tabindex="-1"
        >
          
                
          <i
            class="sap-icon--vertical-grip fd-splitter__resizer-grip-icon"
          />
          
            
        </button>
        

            
        <span
          class="fd-splitter__resizer-decoration-after"
        />
        
        
      </div>
      
        
        
      <div
        class="fd-splitter__split-pane"
      >
        
            Content
        
      </div>
      
    
    </div>
    

  </div>
</div>
`;
